Fixed paragraph overflow

--- a/sass/3-basics/_links.scss
+++ b/sass/3-basics/_links.scss
@@ -5,7 +5,7 @@ a {
 
 	&:hover,
 	&:focus {
-		color: $lime;
+		color: $blue;
 		cursor: pointer;
 	}
 }
